--- a/example.env
+++ b/example.env
@@ -10,11 +10,11 @@ GEMINI_ENABLED=False
 GCP_LOG_METRICS_ENABLED=False
 NUMBER_OF_CHUNKS_TO_COMBINE=6
 UPDATE_GRAPH_CHUNKS_PROCESSED=20
-NEO4J_URI="neo4j://database:7687"
+NEO4J_URI="neo4j+s://8cd20dd8.databases.neo4j.io"
 NEO4J_USERNAME="neo4j"
-NEO4J_PASSWORD="password"
-LANGCHAIN_API_KEY=""
-LANGCHAIN_PROJECT=""
+NEO4J_PASSWORD="q420XFoVfkx79peJhF-ObhlSF4PsLJnFGG7tUMxkKmo"
+LANGCHAIN_API_KEY="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"
+LANGCHAIN_PROJECT="philo"
 LANGCHAIN_TRACING_V2="true"
 LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
 GCS_FILE_CACHE=False
